# mc458-projeto

./: Cargo.toml  HashMapMatrix.json  README.md  TableMatrix.json  TreeMatrix.json  a.py  b1.json  b2-HashMapMatrix.json  b2-TableMatrix.json  b2-TreeMatrix.json  b2.json  report.tex
analise/: analise.py  graficos.py  requirements.txt  tabelas.py
analise/tables/: table_get.tex  table_mul.tex
benches/benchmarks/: main.rs  matrix_generator.rs
relatorio/: analise-assintotica.tex  analise.tex  comparacao.tex  conclusão.tex  hashmapmatrix.tex  main.tex  operacoes.tex  treemapmatrix.tex
relatorio/tables/: table_add.tex  table_muls.tex  table_set.tex  table_transpose.tex
src/: alloc.rs  base_matrix.rs  basic.rs  lib.rs  main.rs  map_matrix.rs  table_matrix.rs
src/map_matrix/: hash_map.rs  transposable_map.rs  tree_map.rs
