[package]
name = "projeto"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }


[[bench]]
name = "benchmarks"
harness = false
